bison integracion al proyecto con lexer

--- a/Proyecto Compiladores 2/CMakeLists.txt
+++ b/Proyecto Compiladores 2/CMakeLists.txt
@@ -1,28 +1,43 @@
 cmake_minimum_required(VERSION 3.14)
-project(LexerProject)
+project(ProyectoCompiladores2)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Librería del Lexer (reutilizable)
+# Encontrar Bison
+find_package(BISON REQUIRED)
+
+# Generar Parser con Bison
+BISON_TARGET(Parser
+    gramatica.y
+    ${CMAKE_CURRENT_BINARY_DIR}/Parser.cpp
+    DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/Parser.hpp
+)
+
+# Incluir directorio de archivos generados
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
+# Librería del Lexer
 add_library(lexer_lib
     Lexer.cpp
     Lexer.hpp
+    ${BISON_Parser_OUTPUTS}
 )
 
-# Ejecutable principal para analizar archivos .txt
-add_executable(lexer_main
+# Ejecutable principal
+add_executable(proyecto_main
     main.cpp
 )
-target_link_libraries(lexer_main PRIVATE lexer_lib)
 
-# Mensaje de ayuda
+target_link_libraries(proyecto_main PRIVATE lexer_lib)
+
 message(STATUS "========================================")
-message(STATUS "Lexer Project Configuration")
+message(STATUS "Proyecto Compiladores 2")
 message(STATUS "========================================")
 message(STATUS "Build target:")
-message(STATUS "  lexer_main  - Analyze .txt files")
+message(STATUS "  proyecto_main - Parser completo")
 message(STATUS "")
 message(STATUS "Usage example:")
-message(STATUS "  ./build/lexer_main program.txt")
+message(STATUS "  ./build/proyecto_main programa.txt")
 message(STATUS "========================================")
